# ClaudeCompany

./: .gitignore  AGENTS.md  CLAUDE.md  gen_diagrams.py  gen_thumbnail.py  install.ps1  pyproject.toml
.agents/skills/note-edit/: SKILL.md
.agents/skills/note-preview/: SKILL.md
.claude/: settings.local.json
.claude/commands/: notion-add-todo.md  trello-add.md  trello-monthly-rotate.md  trello-notion-sync.md  trello-reorder.md  weekly-review.md
.claude/skills/gmail-to-trello/: SKILL.md
.claude/skills/note-edit/: SKILL.md
.codex/: config.toml
.company/: CLAUDE.md
.company/dashboard/: recovery-plan.html
.company/english/: CLAUDE.md
.company/english/profile/: 01-life-flow.md
.company/english/scripts/: 01-life-flow.bi.md  01-life-flow.en.md
.company/marketing/: CLAUDE.md
.company/marketing/campaigns/: 2026-04-28-apps-checklist.md  2026-04-28-xtp3-refund-policy.md  x-branding-strategy.md
.company/marketing/content-plan/: 2026-04-11-pinned-post-thread.md  post-stock.csv  xtp2n_fan_long_50_rewrite.csv
.docs/: github-distribution-docs-site.md  trello-task-dashboard.md  xtp3-rich-lp.md
.serena/: project.yml
docs/: index.html  script.js  styles.css
note_preview/: transformer.py
note_preview/templates/: article.html
scripts/: trello_monthly_rotate.py  trello_rename_lists.py  trello_sync.py
scripts/blog_assets/: gen_amazon_revival_diagrams.py  gen_apps_stripe_diagrams.py  gen_ccnest_diagrams.py  gen_ccnest_images.py  gen_diagrams.py  gen_follower31_diagrams.py  gen_follower31_diagrams_gpt.py  gen_follower31_thumbnail_gpt.py  gen_x_freeze_diagrams.py  generate_xapi_diagrams.py  generate_xapi_diagrams_gemini.py
scripts/dashboard/: goal_progress.py  insights.py  loader.py  revenue_sheet.py  server.py  summary.py
scripts/english_tts/: gen_audio.py
scripts/gmail/: decode_mail.py  download_attachment.py
scripts/x_api/: README.md  client.py  config.py  demo_login.py  example_get_settings.py
tests/: test_docs_site.py
video_editor/: build_cuts.py  build_subtitle.py  cut_fillers.py  detect_silence.py  render_final.py  transcribe.py
(+352 files in other folders)
