[project]
name = "claude-company"
version = "0.1.0"
description = "Claude Company - note.com article tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "youtube-transcript-api>=1.2.4",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["note_preview"]

[project.scripts]
note-preview = "note_preview.cli:main"
